Desktop-specific spacing adjustments/fixes

--- a/wp-content/plugins/indira-active/assets/css/style.css
+++ b/wp-content/plugins/indira-active/assets/css/style.css
@@ -115,7 +115,15 @@ button, input[type="button"], input[type="reset"], input[type="submit"], .button
  * @since 1.0.0
  */
 .site-container {
-  background: radial-gradient(farthest-corner at 20% 2%, #fffadf, #e3dde1, #efe5fb, #dae2e4); }
+  background: radial-gradient(farthest-corner at 20% 2%, #fbf7e6, #e3dde1, #f0eef2, #dae2e4); }
+
+@media only screen and (min-width: 1200px) {
+  .site-inner {
+    margin-top: 52px; }
+  .content {
+    width: 810px; }
+  .sidebar .widget {
+    margin-bottom: 30px; } }
 
 .site-footer {
   border-top: 1px solid #cccccc;
@@ -264,9 +272,18 @@ button, input[type="button"], input[type="reset"], input[type="submit"], .button
  * @package indira
  * @since 1.0.0
  */
+.content article, .sidebar .widget {
+  -webkit-box-shadow: 0 2px 15px rgba(0, 0, 0, 0.01);
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.01); }
+
+.content article .entry-image-link .entry-image {
+  margin-right: 30px;
+  width: 380px;
+  height: auto; }
+
 .content article .custom-date,
 .single-post .content article .custom-date {
-  background: #f6f1e0;
+  background: #f4f0e5;
   color: #333333;
   font-style: normal; }
   .content article .custom-date .my-date-month,
@@ -280,10 +297,6 @@ a.more-link, .more-from-category a {
 .entry-footer {
   padding-bottom: 2px;
   background: #f1f1f1; }
-
-.content article, .sidebar .widget {
-  -webkit-box-shadow: 0 2px 15px rgba(0, 0, 0, 0.01);
-  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.01); }
 
 /**
  * Form
